--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" href="/static/style/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
-    #bg::after {
-      content: "";
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 1;
+    body {
+      padding-top: 60px;
     }
-
-    body > *:not(#bg) {
-      position: relative;
-      z-index: 2;
+    #signup-form {
+      max-width: 400px;
+      position: absolute;
+      top: 1000px;
+      right: 200px;
+      padding: 20px;
+      padding-right: 10%;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 8px;
     }
   </style>
 </head>
